[project]
name = "to-hatch"
version = "0.1.0"
description = "Egg-themed Kanban task manager built with FastAPI and SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "diskdog" }]

[tool.ruff]
target-version = "py312"
# Google style guide recommends 80 chars; we allow 100 to avoid noisy reflow
# of existing code that wraps cleanly at that width. Documented here per the
# style guide's allowance for project-level overrides.
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PL",  # pylint
    "S",   # flake8-bandit (SAST)
]
ignore = [
    "D104",    # missing docstring in public package (tests/ has no __init__)
    "D107",    # missing docstring in __init__  (Pydantic models use class body)
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "PLR2004", # magic value in comparison (fine in tests)
    "PLR0913", # too many arguments to function call
    "S101",    # assert detected (required by pytest)
    "S311",    # standard pseudo-random (uuid4 via stdlib is fine)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "main", "models", "middleware"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# FastAPI/Starlette don't ship inline types; these silences missing-imports
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["structlog.*", "bandit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "htmlcov/*",
    ".venv/*",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
skips = ["B101"]  # assert_used — fine in tests
